...

            loginOption(
                icon: "passkey",
                title: AppStrings.authPasskeyOption,
                action: onPasskeyLogin
            )
            .accessibilityIdentifier("login-passkey-option")
            .padding(.top, .spacing8)
            .padding(.bottom, .spacing8)

            loginOption(
                icon: "phone",
                title: AppStrings.authPairOption,
...
